package client;

public interface Observer {
    

    public void update();
    
}
